--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,9 @@ body {
   padding: 2vmin;
   height: 100vh;
 }
+body {
+  background-color: #1C2331 ;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
